--- a/SpaceShooter/SpaceShooter.vcxproj
+++ b/SpaceShooter/SpaceShooter.vcxproj
@@ -149,31 +149,37 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\app\main.cpp" />
+    <ClCompile Include="..\src\AraragiKoyomiClass.cpp" />
     <ClCompile Include="..\src\BattleField.cpp" />
+    <ClCompile Include="..\src\Bullets.cpp" />
     <ClCompile Include="..\src\Camera.cpp" />
     <ClCompile Include="..\src\GameManager.cpp" />
+    <ClCompile Include="..\src\ParticlesClass.cpp" />
+    <ClCompile Include="..\src\ParticlesEngineClass.cpp" />
     <ClCompile Include="..\src\SceneObject.cpp" />
     <ClCompile Include="..\src\Enemy.cpp" />
     <ClCompile Include="..\src\SpaceShip.cpp" />
-    <ClCompile Include="AraragiKoyomiClass.cpp" />
+    <ClCompile Include="..\src\Weapon.cpp" />
     <ClCompile Include="BMPLoader.cpp" />
-    <ClCompile Include="ParticlesClass.cpp" />
-    <ClCompile Include="ParticlesEngineClass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\AraragiKoyomiClass.h" />
     <ClInclude Include="..\include\BattleField.hpp" />
+    <ClInclude Include="..\include\Bullets.h" />
     <ClInclude Include="..\include\Camera.hpp" />
     <ClInclude Include="..\include\Clock.hpp" />
     <ClInclude Include="..\include\FpsCounter.hpp" />
     <ClInclude Include="..\include\GameManager.hpp" />
     <ClInclude Include="..\include\Enemy.h" />
     <ClInclude Include="..\include\Input.hpp" />
+    <ClInclude Include="..\include\Lazer.h" />
+    <ClInclude Include="..\include\MachineGun.h" />
+    <ClInclude Include="..\include\ParticlesClass.h" />
+    <ClInclude Include="..\include\ParticlesEngineClass.h" />
     <ClInclude Include="..\include\SceneObject.hpp" />
     <ClInclude Include="..\include\SpaceShip.hpp" />
-    <ClInclude Include="AraragiKoyomiClass.h" />
+    <ClInclude Include="..\include\Weapon.h" />
     <ClInclude Include="BMPLoader.h" />
-    <ClInclude Include="ParticlesClass.h" />
-    <ClInclude Include="ParticlesEngineClass.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
