--- a/SpaceShooter/SpaceShooter.vcxproj.filters
+++ b/SpaceShooter/SpaceShooter.vcxproj.filters
@@ -75,6 +75,24 @@
     <ClCompile Include="..\src\Skybox.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Water.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Coin.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\AmmoGun.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\AmmoLazer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\AmmoRocket.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\BoundingBox.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\BattleField.hpp">
@@ -137,6 +155,24 @@
     <ClInclude Include="..\include\Skybox.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Water.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Coin.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\AmmoGun.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\AmmoLazer.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\AmmoRocket.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\BoundingBox.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
@@ -188,6 +224,12 @@
     <None Include="..\Shaders\skybox.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="..\Shaders\water.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="..\Shaders\water.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\textures\araragi.jpg">
@@ -231,6 +273,9 @@
     </Image>
     <Image Include="..\skybox\skybox_west.bmp">
       <Filter>skybox</Filter>
+    </Image>
+    <Image Include="..\textures\particle.png">
+      <Filter>textures</Filter>
     </Image>
   </ItemGroup>
 </Project>
