--- a/SpaceShooter/SpaceShooter.vcxproj
+++ b/SpaceShooter/SpaceShooter.vcxproj
@@ -160,7 +160,9 @@
     <ClCompile Include="..\src\Camera.cpp" />
     <ClCompile Include="..\src\Coin.cpp" />
     <ClCompile Include="..\src\Cube.cpp" />
+    <ClCompile Include="..\src\FPSCounter.cpp" />
     <ClCompile Include="..\src\GameManager.cpp" />
+    <ClCompile Include="..\src\Model_OBJ.cpp" />
     <ClCompile Include="..\src\ParticlesClass.cpp" />
     <ClCompile Include="..\src\ParticlesEngineClass.cpp" />
     <ClCompile Include="..\src\SceneObject.cpp" />
@@ -180,17 +182,18 @@
     <ClInclude Include="..\include\AmmoRocket.h" />
     <ClInclude Include="..\include\AraragiKoyomiClass.h" />
     <ClInclude Include="..\include\BattleField.hpp" />
-    <ClInclude Include="..\include\BoundingBox.h" />
     <ClInclude Include="..\include\Bullets.h" />
     <ClInclude Include="..\include\Camera.hpp" />
     <ClInclude Include="..\include\Clock.hpp" />
     <ClInclude Include="..\include\Coin.h" />
+    <ClInclude Include="..\include\FPSCounter.h" />
     <ClInclude Include="..\include\FpsCounter.hpp" />
     <ClInclude Include="..\include\GameManager.hpp" />
     <ClInclude Include="..\include\Enemy.h" />
     <ClInclude Include="..\include\Input.hpp" />
     <ClInclude Include="..\include\Lazer.h" />
     <ClInclude Include="..\include\MachineGun.h" />
+    <ClInclude Include="..\include\Model_OBJ.h" />
     <ClInclude Include="..\include\ParticlesClass.h" />
     <ClInclude Include="..\include\ParticlesEngineClass.h" />
     <ClInclude Include="..\include\SceneObject.hpp" />
